tests/ui/foreign_def.stderr
Error [E0008]: functions are written with `fn`, not `def`
  --> tests/ui/foreign_def.lex:1:1
    |
  1 | def greet() {
    | ^^^
 Why: Lex has exactly one spelling for each thing, so all code reads the same
 Fix: replace `def` with `fn`
