tests/ui/foreign_def.lex
def greet() {
    print("hi");
}

fn main() {
    greet();
}
